<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:orientation="vertical"
    app:cardBackgroundColor="@color/cardview_light_background"
    app:cardCornerRadius="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:background="@color/app_txt_white"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/school_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/book"
                android:textColor="@color/color_black"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tv_bundle_rate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp"
                android:layout_weight="0.3"
                android:gravity="end"
                android:text="@string/dummy_rate"
                android:textColor="@color/color_black"
                android:textSize="17sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/dec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:maxLines="5"
            android:text="@string/dummy_details"
            android:textColor="@color/color_header_text_gray"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/add_bundle"
            style="@style/green_button_style"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="2dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/add_to_cart"
            android:textSize="10sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/remove"
            style="@style/red_button_style"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="2dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/remove"
            android:textSize="10sp"
            android:visibility="gone" />
    </LinearLayout>
</androidx.cardview.widget.CardView>