<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.changepassword.ChangePasswordActivity">

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/back_outline_curve"
        android:layout_margin="@dimen/_8sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp">

            <EditText
                android:id="@+id/et_mobile_num"
                style="@style/edit_text_style"
                android:inputType="number"
                android:layout_marginTop="@dimen/_15sdp"
                android:maxLength="10"
                android:hint="@string/mobile_num" />
            <!--                android:text="9899989999"-->

            <Button
                android:id="@+id/btn_get_otp2"
                android:text="@string/get_otp"
                style="@style/button_style"
                android:layout_marginTop="@dimen/_15sdp"/>

            <EditText
                android:id="@+id/et_otp"
                android:hint="@string/otp"
                android:inputType="number"
                android:visibility="visible"
                style="@style/edit_text_style"
                android:layout_marginTop="@dimen/_8sdp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/bg_outline_curve">

                <EditText
                    android:id="@+id/et_new_password"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_password"
                    android:inputType="textPassword"
                    android:visibility="visible"
                    android:textColor="@color/color_black"
                    android:textColorHint="@color/md_grey_500"
                    android:textSize="16sp"
                    android:padding="@dimen/_8sdp" />
                <!--                    android:text="testing"-->

                <View
                    android:layout_width="@dimen/_1sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:background="@color/md_grey_400" />

                <ImageView
                    android:id="@+id/image_show"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:src="@drawable/ic_visibility_black_24dp"
                    android:focusable="true" />

                <ImageView
                    android:id="@+id/image_hide"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:visibility="gone"
                    android:src="@drawable/ic_visibility_off_black_24dp"
                    android:focusable="true" />

            </LinearLayout>

            <EditText
                android:id="@+id/et_confirm_password"
                android:hint="@string/confirm_password"
                android:layout_margin="@dimen/_15sdp"
                android:inputType="textPassword"
                android:visibility="gone"
                style="@style/edit_text_style" />

            <Button
                android:id="@+id/btn_continue_2"
                android:text="@string/tx_continue"
                android:visibility="visible"
                style="@style/button_style"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_15sdp"/>

        </LinearLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_back_to_login"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_7sdp"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_width="match_parent"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="@color/colorPrimary"
                android:layout_height="wrap_content"
                android:text="@string/back_to_login" />
    </LinearLayout>
</RelativeLayout>