<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/order_id"
                    android:textColor="@color/color_black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_order_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="5dp"
                    android:gravity="end"
                    android:text="@string/dummy_order_id"
                    android:textColor="@color/color_black"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/order_rate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:gravity="end"
                android:text="@string/dummy_rate"
                android:textSize="18sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/dummy_date"
            android:textColor="@color/color_gray"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:layout_weight="1"
                android:gravity="start"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_corner_radius"
                    android:padding="5dp"
                    android:text="@string/status"
                    android:textAllCaps="true"
                    android:textColor="@color/color_blue"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:gravity="end"
                android:orientation="horizontal"
                android:paddingStart="25dp">

                <TextView
                    android:id="@+id/cancel_order_btn"
                    style="@style/red_button_style"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginBottom="2dp"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/cancel"
                    android:textSize="10sp"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>