<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/home"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        android:textSize="19sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_profile_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="2dp"
                android:text="@string/name"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/user_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="15dp"
                android:textColor="@color/md_white_10001"
                android:text="@string/dummy_address" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_marginStart="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="0.1"
            android:src="@drawable/ic_email" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_email"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:text="@string/dummy_email"
            android:textColor="@color/md_white_10001"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginStart="8dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="0.1"
            android:src="@drawable/ic_call" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/user_mob_num"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:textColor="@color/md_white_10001"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:text="@string/dummy_mobile_num" />

    </LinearLayout>
</LinearLayout>